overflox scrollbar fix

--- a/YourDynastySite/YourDynastySite/wwwroot/css/style.css
+++ b/YourDynastySite/YourDynastySite/wwwroot/css/style.css
@@ -40,9 +40,6 @@ Version: 1.7
 /*-----------------------------------
     1 - General Styles
 ------------------------------------*/
-html {
-    overflow-x: hidden;
-}
 body {
     overflow-x: hidden;
     background-color: #f6f6f6;
